# mazerunner

./: pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
mazerunner/: core.py  main.py  maze.py
tests/: conftest.py  maze_test.py
